tests-integration/fixtures/checking/1772476020_instance_member_too_many_binders/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
show :: forall (@a :: Type). Show (a :: Type) => (a :: Type) -> String

Types
Show :: Type -> Constraint

Classes
class forall (a :: Type). Show (a :: Type)
  show :: forall (@a :: Type). Show (a :: Type) => (a :: Type) -> String

Instances
instance Show Int

Diagnostics
error[TooManyBinders]: Too many binders: expected 1, got 2
  --> 7:1..8:20
  |
7 | instance Show Int where
  | ^~~~~~~~~~~~~~~~~~~~~~~
